--- a/main_page.css
+++ b/main_page.css
@@ -1,25 +1,42 @@
 body{
-    background-color: rgb(32,14,58);
-}
-.flex-container {
-    display: flex;
-    flex-direction: column;
+    background-color: rgb(0,0,0);
+    overflow: hidden;
     
 }
 
+.flex-container {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    width: 15%;
+    height: 100%;
+    left: 5%;
+    
+    
+    background-color: rgb(240,237,207);
+}
+.flex-container-2 {
+    position: absolute;
+    margin:auto;
+    width: 100%;
+    height: 15%;
+    top: 10%;
+    left: 20%;
+    text-align: center;
+    background-color: rgb(240,237,207);
+}
+
 .flex-container > div{
-    font-size: 30px;
+  
+    
+    
+    
     
     
 }
-.flex-container > div > button{
-    font-size: 30px;
-    text-align: center;
-    padding: 1%;
-    width: 100%;
-    margin: auto;
-    border-style: solid;
-    border-color:rgb(56, 135, 190) ;
+.flex-container > div > a{ 
+    
+
 }
 .flex-container > div > button:hover{
     background-color:  rgb(82,211,216);
