--- a/main_page.css
+++ b/main_page.css
@@ -1,43 +1,79 @@
 body{
-    background-color: rgb(0,0,0);
+    background-color: black;
     overflow: hidden;
-    
+    font-family: sans-serif;
 }
 
-.flex-container {
+.page-select {
     position: absolute;
     display: flex;
     flex-direction: column;
-    width: 15%;
-    height: 100%;
+    width: 10%;
+    height: 100vh;
     left: 5%;
+    border-left: 5px  solid;
+    border-right: 5px solid ;
     
-    
-    background-color: rgb(240,237,207);
+    border-color: rgb(64, 162, 216);
+    background-color: rgb(11,96,176);
+    justify-content: center;
 }
-.flex-container-2 {
+.page-select > a{
+    
+    font-style: italic;
+    font-size: 25px;
+    color:white;
+    text-align: center;
+    text-decoration: none;
+    background-color: rgb(64, 162, 216);
+    
+}
+.page-select > a:hover{
+    
+    background-color: rgb(11,96,176);
+    
+}
+
+.portfolio-title {
     position: absolute;
     margin:auto;
-    width: 100%;
+    width: 90%;
     height: 15%;
-    top: 10%;
-    left: 20%;
+    top: 10%;   
+    left: 15.5%;
+    border-top: 5px solid rgb(64, 162, 216);
+    border-bottom: 5px solid rgb(64, 162, 216);
+    background-color: rgb(11,96,176);
+}
+.portfolio-title > h1{
+    font-style: italic;
+    text-decoration: underline;    
     text-align: center;
-    background-color: rgb(240,237,207);
+    margin-top: 50px;
+    font-size: 30px;
+    
+    color: white;
+    top: 30%;
 }
 
-.flex-container > div{
-  
+#left-side {
+    position: absolute;
+    width: 5%;
+    height: 100vh;
     
-    
-    
-    
-    
+    background-color: rgb(240, 237, 207);
+    justify-content: center;
+    /*position:absolute;
+    background-color: rgb(240, 237, 207);
+    width: 5%;
+    min-height: 100vh;*/
 }
-.flex-container > div > a{ 
-    
+#top-side{
+    position: absolute;
+    margin:auto;
+    width: 90%;
+    height: 15%;
+    left: 15%;
+    background-color: rgb(240, 237, 207);
+}
 
-}
-.flex-container > div > button:hover{
-    background-color:  rgb(82,211,216);
-}
