--- a/main_page.css
+++ b/main_page.css
@@ -11,10 +11,7 @@ body{
     width: 10%;
     height: 100vh;
     left: 5%;
-    border-left: 5px  solid;
-    border-right: 5px solid ;
-    
-    border-color: rgb(64, 162, 216);
+    top: 10%;
     background-color: rgb(11,96,176);
     justify-content: center;
 }
@@ -25,24 +22,25 @@ body{
     color:white;
     text-align: center;
     text-decoration: none;
-    background-color: rgb(64, 162, 216);
+    background-color: rgb(11,96,176);
+    padding-top: 15%;
+    padding-bottom: 15%;
+    border: 2px solid white;
     
 }
 .page-select > a:hover{
     
-    background-color: rgb(11,96,176);
+    background-color: rgb(64, 162, 216);
     
 }
 
 .portfolio-title {
     position: absolute;
-    margin:auto;
+    margin:auto;    
     width: 90%;
     height: 15%;
     top: 10%;   
-    left: 15.5%;
-    border-top: 5px solid rgb(64, 162, 216);
-    border-bottom: 5px solid rgb(64, 162, 216);
+    left: 15%;
     background-color: rgb(11,96,176);
 }
 .portfolio-title > h1{
@@ -61,8 +59,8 @@ body{
     width: 5%;
     height: 100vh;
     
-    background-color: rgb(240, 237, 207);
-    justify-content: center;
+    background-color: rgb(64, 162, 216);
+   
     /*position:absolute;
     background-color: rgb(240, 237, 207);
     width: 5%;
@@ -71,9 +69,8 @@ body{
 #top-side{
     position: absolute;
     margin:auto;
-    width: 90%;
+    width: 100%;
     height: 15%;
-    left: 15%;
-    background-color: rgb(240, 237, 207);
+    background-color: rgb(64, 162, 216);
 }
 
