--- a/main_page.css
+++ b/main_page.css
@@ -1,5 +1,9 @@
+html{
+    margin: 0;
+}
 body{
-    background-color: black;
+    margin: 0;
+    background-color: rgb(64, 162, 216);
     overflow: hidden;
     font-family: sans-serif;
 }
@@ -11,66 +15,73 @@ body{
     width: 10%;
     height: 100vh;
     left: 5%;
-    top: 10%;
+    
     background-color: rgb(11,96,176);
     justify-content: center;
 }
 .page-select > a{
-    
+    text-transform: capitalize;
     font-style: italic;
     font-size: 25px;
     color:white;
     text-align: center;
     text-decoration: none;
     background-color: rgb(11,96,176);
-    padding-top: 15%;
-    padding-bottom: 15%;
-    border: 2px solid white;
+    padding-top: 20%;
+    padding-bottom: 20%;
+    
     
 }
 .page-select > a:hover{
-    
     background-color: rgb(64, 162, 216);
     
 }
 
 .portfolio-title {
     position: absolute;
-    margin:auto;    
-    width: 90%;
+    
+    width: 85%;
     height: 15%;
-    top: 10%;   
+
     left: 15%;
     background-color: rgb(11,96,176);
 }
 .portfolio-title > h1{
+    text-transform: uppercase;
     font-style: italic;
     text-decoration: underline;    
     text-align: center;
-    margin-top: 50px;
-    font-size: 30px;
-    
+    margin-top: 30px;
+    font-size: 40px;
+    font-weight: 1000;
     color: white;
     top: 30%;
 }
 
-#left-side {
-    position: absolute;
-    width: 5%;
-    height: 100vh;
-    
-    background-color: rgb(64, 162, 216);
-   
-    /*position:absolute;
-    background-color: rgb(240, 237, 207);
-    width: 5%;
-    min-height: 100vh;*/
+
+.content-background {
+    position:absolute;
+    left: 15%;
+    top: 15%;
+    width: 85%; 
+    height:85%;
+    background-color: black;
+    color: white;
 }
-#top-side{
+
+.content{
+    text-transform: capitalize;
     position: absolute;
-    margin:auto;
-    width: 100%;
-    height: 15%;
-    background-color: rgb(64, 162, 216);
+    left: 10%;
+    top: 5%;
+    font-size: 35px;
+    color: rgb(240, 237, 207);
+    width: 70%;
+}
+
+.content > p{
+    text-transform: none;
+    color: white;
+    font-size: 25px;
 }
 
