--- a/main_page.css
+++ b/main_page.css
@@ -85,3 +85,17 @@ body{
     font-size: 25px;
 }
 
+.logos{
+    position: absolute;
+    display: flex;
+    flex-direction: row ;
+    
+    width: 50%;
+    height: auto;
+    gap: 20%;
+}
+
+.logos > img {
+    padding: 2%;
+    
+}
