Education page content update but needs shift

--- a/css/edu_page.css
+++ b/css/edu_page.css
@@ -5,9 +5,13 @@
     font-style: bold;
     width: 100%;
     gap: 38%;
+    color: white;
 }
 
 #Time{
     font-style: italic;
 }
 
+#awards{
+   
+}
