--- a/css/edu_page.css
+++ b/css/edu_page.css
@@ -6,12 +6,24 @@
     width: 100%;
     gap: 38%;
     color: white;
+    height: 100%;
 }
 
 #Time{
     font-style: italic;
 }
 
-#awards{
-   
+.awards{
+    position: absolute;
+    top: 33%;
+    font-size: 3vh;
+    color: white;
+}
+
+
+#Two{
+    position: absolute;
+    top: 20%;
+    gap: 40%;
+    
 }
