--- a/css/main_page.css
+++ b/css/main_page.css
@@ -70,10 +70,11 @@ body{
     text-transform: capitalize;
     position: absolute;
     left: 10%;
-    top: 5%;
+    
     font-size: 4vh;
     color: rgb(240, 237, 207);
     width: 70%;
+    height: 100%;
 }
 
 .content > p{
@@ -81,5 +82,6 @@ body{
     color: white;
     font-size: 3vh;
 }
+
 
 
