--- a/css/edu_page.css
+++ b/css/edu_page.css
@@ -4,26 +4,70 @@
     flex-direction:row;
     font-style: bold;
     width: 100%;
-    gap: 38%;
+    
     color: white;
     height: 100%;
+    top: 20%;
 }
 
-#Time{
+.school > p{
+    margin-top:0;
+
+}
+
+#loc{
     font-style: italic;
+    position: absolute;
+    
+    right: 0%;
 }
 
 .awards{
     position: absolute;
-    top: 33%;
     font-size: 3vh;
     color: white;
+    width: 100%;
+    height: 100%;
+
 }
 
-
-#Two{
+.awards > p{
     position: absolute;
-    top: 20%;
-    gap: 40%;
+    top: 2%;
+    font-style: italic;
+}
+
+.awards > ul{
+    position:absolute;
+    width: 100%;
+    height: 100%;
+    top: 6%;
     
+}
+
+#two{
+    position: absolute;
+    height: 100%;
+    top: 45%;
+}
+
+#two > .awards > ul{
+    position: absolute;
+    top: 2%;
+}
+
+#uni {
+    position: absolute;
+    width: 40%;
+    height: 30%;
+
+    bottom: 5%;
+}
+
+#second{
+    position: absolute;
+    width: 40%;
+    height: 30%;
+    right: 0%;
+    bottom: 5%;
 }
