--- a/css/skills_page.css
+++ b/css/skills_page.css
@@ -1,8 +1,36 @@
 .content{
-    position:absolute;
+    width: 80%;
+    color: white;
+}
+
+.lang > ul{
+    
+    display: flex;
+    width: 100%;
+    
+    color: white;
+    
+}
+
+.envir{
     width: 100%;
     height: 100%;
-    display: flex;
-    
-   
 }
+
+.envirImg > img{
+    display: inline;
+    width: 20%;
+    height: 20%;
+}
+
+.langImg > img{
+    display: inline;
+    width: 15%;
+    height: 20%;
+}
+
+h2{
+    text-decoration: underline;
+}
+
+
