--- a/css/about_page.css
+++ b/css/about_page.css
@@ -1,14 +1,38 @@
 .logos{
-    position: absolute;
-    display: flex;
-    flex-direction: row ;
-    justify-content: center;
-    width: 100%;
-    height: 23vh;
-    gap: 20%;
+    
+    
+    
 }
 
-.logos > img {
-    padding: 2%;
+.logos > img{
     
+    position: absolute;
+    
+    left: 60%;
+    top: 10%;
+    width: 35%;
+    height: 65%;
+   
+}
+
+
+h2{
+    position: absolute;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+}
+
+.intro{
+    position: absolute;
+    left: 10%;
+    height: 100%;
+    width: 45%;
+    font-size: 3vh;
+    color: white;
+    top: 8%;
+}
+
+span{
+    color: rgb(64, 162, 216);
 }
