--- a/css/about_page.css
+++ b/css/about_page.css
@@ -7,12 +7,12 @@
 .logos > img{
     
     position: absolute;
-    
+   
     left: 60%;
-    top: 10%;
+    top: 12%;
     width: 35%;
     height: 65%;
-   
+    object-fit: contain;
 }
 
 
@@ -33,6 +33,28 @@ h2{
     top: 8%;
 }
 
-span{
+.name{
     color: rgb(64, 162, 216);
 }
+
+.greeting{
+    color:rgb(255,165,0);
+}
+
+.enrolled{
+    color: rgb(64, 162, 216);
+}
+
+.contact{
+    position: absolute;
+    left: 72%;
+    top: 78%;
+
+}
+
+
+.contact > a > img{
+    width: 20%;
+    height: 20%;
+}
+
