--- a/css/main_page.css
+++ b/css/main_page.css
@@ -46,7 +46,7 @@ Defines the sections of the page
         display: flex;
         flex-direction: row;
         width: 100%;
-        height: 15%;
+        height: auto;
         
         position: relative;
 
@@ -54,14 +54,19 @@ Defines the sections of the page
     .page-select a{
         text-transform: capitalize;
         font-style: italic;
-        font-size: 1.5vw;
+        font-size: 3vh;
         color:white;
         text-align: center;
         text-decoration: none;
-        
+        padding-top: 2%;
+        padding-bottom: 2%;
+    
+        padding-left: 5%;
+        padding-right: 5%;
     
     
     }
+    
 
 }
 
@@ -108,7 +113,7 @@ Defines the sections of the page
 }
 
 .logos > img{
-    border-radius: 75%;
+    border-radius: 50%;
     max-width: 50%;
     height: auto;
     object-fit: contain;
@@ -116,6 +121,14 @@ Defines the sections of the page
     
    
 }
+
+@media screen and (max-width: 900px){
+    .logos{
+        display: none;
+    }
+
+}
+
 
 
 
