--- a/css/main_page.css
+++ b/css/main_page.css
@@ -194,11 +194,11 @@ section > h2{ /* Section header size essentially */
     color: white;
     padding: 0;
     margin: 0;
-    line-height: 0;
+    
 }
 
 #education > ul {
-    line-height: 1.3;
+    
 }
 
 
@@ -219,9 +219,38 @@ section > h2{ /* Section header size essentially */
     flex-direction:row;
     justify-content: space-between;
     font-style: italic;
-    margin: 0;
-    padding: 0;
 }
+
+.courses {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.courses > h3 {
+    display: flex;
+    justify-content: center;
+}
+
+.course-tabs {
+    display:flex;
+    flex-direction: row;
+    
+}
+
+.course-tabs > button {
+    width: 25%;
+}
+
+.year {
+  display: none;
+}
+
+.year.visible {
+  display: flex;
+  flex-direction: column;
+}
+
 
 
 
@@ -267,8 +296,6 @@ section > h2{ /* Section header size essentially */
 }
 
 
-#two > .role > ul{
-    
-}
+
 
 
