--- a/css/main_page.css
+++ b/css/main_page.css
@@ -186,6 +186,10 @@ section > h2{ /* Section header size essentially */
     font-size: 3.5vh;
 }
 
+p {
+    margin: 0;
+}
+
 /* Next Section is for the Education part */
 
 
@@ -197,9 +201,6 @@ section > h2{ /* Section header size essentially */
     
 }
 
-#education > ul {
-    
-}
 
 
 .school {
@@ -239,6 +240,7 @@ section > h2{ /* Section header size essentially */
 }
 
 .course-tabs > button {
+    font-size: 1.5vmax;
     width: 25%;
 }
 
@@ -252,47 +254,8 @@ section > h2{ /* Section header size essentially */
 }
 
 
-
-
-.work {
-    
-    display:flex;
-    flex-direction:row;
-    font-style: bold;
-    width: 100%;
-    
-    color: white;
-    height: 100%;
-    top: 20%;
-}
-
-.work > p{
-    margin-top:0;
-
-}
-
-
-.role{
-    
-    font-size: 3vh;
-    color: white;
-    width: 100%;
-    height: 100%;
-
-}
-
-.role > p{
-    
-    top: 2%;
-    font-style: italic;
-}
-
-.role > ul{
-    
-    width: 100%;
-    height: 100%;
-    top: 6%;
-    
+#experience {
+    font-size: 3vh; 
 }
 
 
